# imageprocessort

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/CLI/: CommandLineArgs.cpp  CommandLineArgs.h
src/FilterController/: FilterController.cpp  FilterController.h
src/Filters/: BaseFilter.h  Factory.cpp  Factory.h  Filters.cpp  Filters.h
src/IO/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
src/Image/: Image.cpp  Image.h  Pixel.cpp  Pixel.h
src/ImageFormats/: BMP.cpp  BMP.h  ImageFormat.h
src/ImageHandler/: ImageHandler.cpp  ImageHandler.h
src/Utils/: ClampedVector.h
tests/: CMakeLists.txt  iotest.cpp  test_clamped_vector.cpp
